--- a/networkdisk/src/main/resources/db.properties
+++ b/networkdisk/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 mysql.driver=com.mysql.jdbc.Driver
 mysql.url=jdbc:mysql://localhost:3306/networkdisk?useUnicode=true&characterEncoding=utf-8
 mysql.username=root
-mysql.password=0326
+mysql.password=root
 
 
 #driver=oracle.jdbc.driver.OracleDriver
