--- a/networkdisk/pom.xml
+++ b/networkdisk/pom.xml
@@ -37,6 +37,12 @@
 			<artifactId>struts2-spring-plugin</artifactId>
 			<version>${struts.version}</version>
 		</dependency>
+		<!-- struts2的json包 -->
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-json-plugin</artifactId>
+			<version>${struts.version}</version>
+		</dependency>
 		<!-- spring 依赖包 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -105,7 +111,7 @@
 			<artifactId>c3p0</artifactId>
 			<version>0.9.5.2</version>
 		</dependency>
-		<!-- myql 依赖包 -->
+		<!-- mysql 依赖包 -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
