--- a/networkdisk/src/main/resources/log4j.properties
+++ b/networkdisk/src/main/resources/log4j.properties
@@ -1,20 +1,18 @@
-#info:选择日志的等级版本(debug:System.out.println,info:hibernate hql,warn:提示作用,不影响使用,error:出现异常)
-#stdout:选择打印的位置:log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.rootLogger=error, stdout
+### \u8BBE\u7F6ELogger\u8F93\u51FA\u7EA7\u522B\u548C\u8F93\u51FA\u76EE\u7684\u5730 ###
+log4j.rootLogger=debug,stdout,logfile
 
-#在控制台打印日志
+
+### \u628A\u65E5\u5FD7\u4FE1\u606F\u8F93\u51FA\u5230\u63A7\u5236\u53F0 ###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#打印的样式
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+#log4j.appender.stdout.Target=System.err
+log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
 
 
-#在文件打印日志
-log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=pss.log
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d %5p (%c:%L) - %m%n
-
-#覆盖上面的全局日志等级
-log4j.logger.cd.itcast.pss=debug
+###\u663E\u793ASQL\u8BED\u53E5\u90E8\u5206
+log4j.logger.com.ibatis=DEBUG 
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG 
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG 
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG 
+log4j.logger.java.sql.Connection=DEBUG 
+log4j.logger.java.sql.Statement=DEBUG 
+log4j.logger.java.sql.PreparedStatement=DEBUG
