--- a/networkdisk/pom.xml
+++ b/networkdisk/pom.xml
@@ -141,6 +141,15 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+
+		<!-- 邮件包 -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.6</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<finalName>networkdisk</finalName>
