--- a/networkdisk/pom.xml
+++ b/networkdisk/pom.xml
@@ -148,8 +148,12 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.5.6</version>
 		</dependency>
-
-
+		<!-- 图片转pdf包 -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.10</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>networkdisk</finalName>
