--- a/networkdisk/src/main/webapp/WEB-INF/web.xml
+++ b/networkdisk/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,15 @@
 	</listener>
 
 	<filter>
+		<filter-name>LoginFilter</filter-name>
+		<filter-class>com.july.networkdisk.filter.LoginFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
 	</filter>
@@ -31,6 +40,8 @@
 		<filter-name>struts2</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+
 
 	<error-page>
 		<error-code>404</error-code>
