--- a/networkdisk/pom.xml
+++ b/networkdisk/pom.xml
@@ -154,6 +154,17 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.10</version>
 		</dependency>
+		<!-- hadoop-hdfs 备份 -->
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-hdfs</artifactId>
+			<version>2.7.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-common</artifactId>
+			<version>2.7.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>networkdisk</finalName>
