--- a/networkdisk/src/main/webapp/WEB-INF/web.xml
+++ b/networkdisk/src/main/webapp/WEB-INF/web.xml
@@ -39,9 +39,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-
-
-	<error-page>
+	<!-- <error-page>
 		<error-code>404</error-code>
 		<location>/exception.jsp</location>
 	</error-page>
@@ -52,5 +50,5 @@
 	<error-page>
 		<exception-type>java.lang.Exception</exception-type>
 		<location>/exception.jsp</location>
-	</error-page>
+	</error-page> -->
 </web-app>
