--- a/networkdisk/pom.xml
+++ b/networkdisk/pom.xml
@@ -165,6 +165,11 @@
 			<artifactId>hadoop-common</artifactId>
 			<version>2.7.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-client</artifactId>
+			<version>2.7.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>networkdisk</finalName>
