--- a/networkdisk/src/main/webapp/WEB-INF/web.xml
+++ b/networkdisk/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,10 @@
 		<filter-name>struts2</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	<filter> 
+		<filter-name>StartFilter</filter-name> 
+		<filter-class>com.july.networkdisk.filter.StartFilter</filter-class> 
+	</filter> 
 	<!-- <error-page>
 		<error-code>404</error-code>
 		<location>/exception.jsp</location>
